# milter

./: README.md  config.toml  domain_history.json  pyproject.toml  requirements.txt  test-domain-age.py  test_fuzzy_domain.py
amavis_milter/: __init__.py  __main__.py  config.py  engine.py  milter.py  rdap_client.py  whois_client.py
amavis_milter/checks/: __init__.py  base.py  domain_age.py  false_reply.py  fuzzy_domain.py
