[project]
name = "amavis-milter"
version = "1.0.0"
description = "Amavisd milter module for spam analysis: domain age, false reply, fuzzy domain similarity"
requires-python = ">=3.10"
dependencies = [
    "Milter>=1.0",
    "tomli>=2.0",
    "levenshtein>=0.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project.scripts]
amavis-milter = "amavis_milter.__main__:main"
